<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.loginmvvm.viewmodel.LoginViewModel"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_next"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dimens_50dp"
            android:layout_marginEnd="@dimen/dimens_26dp"
            android:id="@+id/actLogin_btnLogin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/actLogin_btnLogin"
            app:layout_constraintBottom_toBottomOf="@+id/actLogin_btnLogin"
            android:layout_marginStart="@dimen/dimens_26dp"
            android:text="@string/tv_Sign_Up"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_18sp"
            android:id="@+id/actLogin_tvSignUp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/actLogin_btnLogin"
            android:layout_marginLeft="@dimen/dimens_26dp"
            android:layout_marginRight="@dimen/dimens_26dp"
            android:layout_marginBottom="@dimen/dimens_20dp"
            android:text="@string/tittle_by_clicking_sign_up"
            android:textColor="@color/grey"
            android:textSize="@dimen/dimens_12sp"
            android:id="@+id/actLogin_tvTitleByClick"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/actLogin_tvTitleByClick"
            android:layout_marginLeft="@dimen/dimens_26dp"
            android:layout_marginRight="@dimen/dimens_26dp"
            android:layout_marginBottom="@dimen/dimens_20dp"
            android:text="@string/tittle_over_years_of_age"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_14sp"
            android:id="@+id/actLogin_cbxOverYearsOfAge"
            android:button="@drawable/bg_checkbox"
            android:theme="@style/color_checkBox"
            android:drawablePadding="@dimen/dimens_50dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_26dp"
            android:layout_marginRight="@dimen/dimens_26dp"
            android:layout_marginBottom="@dimen/dimens_25dp"
            app:layout_constraintBottom_toTopOf="@+id/actLogin_cbxOverYearsOfAge"
            app:boxBackgroundColor="@color/transparent"
            android:id="@+id/actLogin_layoutPassword"
            style="@style/Widget.App.TextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_Your_Password"
                android:inputType="textPassword"
                android:id="@+id/actLogin_edtPassword"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:includeFontPadding="true"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_1dp"
                android:background="@color/blue_turtle"
                android:layout_marginTop="@dimen/dimens_5dp"
                android:id="@+id/actLogin_viewPassword"/>
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_1dp"
                android:id="@+id/actLogin_pbPassword"
                android:background="@color/grey"
                android:indeterminate="false"
                android:maxHeight="20dip"
                android:minHeight="20dip"
                android:layout_weight="1"
                android:progress="0"
                style="?android:attr/progressBarStyleHorizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Too short"
                android:textColor="@color/white"
                android:gravity="end"
                android:layout_marginTop="@dimen/dimens_10dp"
                android:textSize="@dimen/dimens_14sp"
                android:id="@+id/actLogin_tvStrength"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_26dp"
            android:layout_marginRight="@dimen/dimens_26dp"
            android:layout_marginBottom="@dimen/dimens_25dp"
            app:layout_constraintBottom_toTopOf="@+id/actLogin_layoutPassword"
            app:boxBackgroundColor="@color/transparent"
            android:id="@+id/actLogin_layoutEmail"
            style="@style/Widget.App.TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_Your_Email"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:id="@+id/actLogin_edtEmail"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_1dp"
                android:background="@color/blue_turtle"
                android:layout_marginTop="@dimen/dimens_5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/actLogin_layoutEmail"
            android:layout_marginLeft="@dimen/dimens_26dp"
            android:layout_marginRight="@dimen/dimens_26dp"
            android:layout_marginBottom="@dimen/dimens_30dp"
            android:text="@string/tittle_started"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_22sp"
            android:id="@+id/actLogin_tvTittleStarted" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/dimens_26dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/button_arrow"
            android:layout_marginTop="@dimen/dimens_25dp"
            android:id="@+id/actLogin_btnBack"/>
        

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
