<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <data>
            <variable
                name="viewModel"
                type="com.example.loginmvvm.viewmodel.CategoriesViewModel"/>
            <import type="android.view.View"/>
        </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_background_categories"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/dimens_26dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/button_arrow"
            android:layout_marginTop="@dimen/dimens_25dp"
            android:id="@+id/actCategories_btnBack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/actCategories_btnBack"
            app:layout_constraintBottom_toBottomOf="@+id/actCategories_btnBack"
            android:layout_marginEnd="@dimen/dimens_26dp"
            android:text="@string/tv_Done"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_18sp"
            android:id="@+id/actCategories_tvDone"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.30"
            android:orientation="horizontal"
            android:id="@+id/actCategories_tvGuideline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actCategories_tvGuideline"
            android:layout_marginStart="@dimen/dimens_20dp"
            android:text="@string/title_welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_22sp"
            android:id="@+id/actCategories_tvWelcome"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actCategories_tvWelcome"
            android:layout_marginStart="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:text="@string/title_select_categories"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_14sp"
            android:id="@+id/actCategories_tvPleaseSelectCategories"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/actCategories_tvPleaseSelectCategories"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dimens_15dp"
            android:layout_marginEnd="@dimen/dimens_15dp"
            android:layout_marginBottom="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:id="@+id/actCategories_rclCategories"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
